--- a/scss/layouts/_about.scss
+++ b/scss/layouts/_about.scss
@@ -3,7 +3,7 @@
     right: 5%;
     top: 2rem;
     @include bp(480px){
-        top: 8rem;
+        top: 10rem;
     }
 }
 #about-close{
